--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/detail_container"
+    android:id="@+id/main_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.DetailActivity">
+    tools:context=".ui.activity.MainActivity">
 
-    <include layout="@layout/app_bar_layout" />
+    <include layout="@layout/app_tab_layout" />
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swipe_refresh_detail"
+        android:id="@+id/swipe_refresh_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:isScrollContainer="true"
@@ -18,29 +17,15 @@
         tools:ignore="PrivateResource">
 
         <android.support.v4.widget.NestedScrollView
-            android:id="@+id/nested_scrollview_detail"
+           android:id="@+id/nested_scrollview_main"
             style="@style/ScrollBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:ignore="InconsistentLayout">  <!--no used in Tablet Version-->
+            android:layout_height="wrap_content">
 
-            <LinearLayout
+            <FrameLayout
+                android:id="@+id/fragment_subreddit_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <FrameLayout
-                    android:id="@+id/fragment_title_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <FrameLayout
-                    android:id="@+id/fragment_detail_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
+                android:layout_height="wrap_content" />
         </android.support.v4.widget.NestedScrollView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
