--- a/app/src/main/res/layout/activity_detail_tablet.xml
+++ b/app/src/main/res/layout/activity_detail_tablet.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.activity.DetailActivity">
 
+   <!-- remove inconsistent layout use other layout in setContentView -->
     <include layout="@layout/app_bar_layout" />
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -14,8 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:isScrollContainer="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:ignore="PrivateResource">
+
+<!--
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +31,7 @@
                 android:id="@+id/fragment_subreddit_container"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" /> <!--only used in tablet version-->
+                android:layout_weight="1" />
 
 
             <LinearLayout
@@ -52,10 +55,7 @@
 
 
         </LinearLayout>
-        <!--
-                </android.support.v4.widget.NestedScrollView>
 
-           -->
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.design.widget.CoordinatorLayout>
