--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,4 @@
+<!--suppress AndroidDomInspection -->
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="AppThemeLight" parent="Theme.AppCompat.Light.DarkActionBar">
