--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
-<!--suppress AndroidDomInspection -->
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="AppThemeLight" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -22,7 +21,7 @@
 
     <style name="confirmDialogLight" parent="Theme.AppCompat.Dialog.Alert">
         <item name="colorAccent">@color/blue_A700</item>
-        <item name="android:background" tools:ignore="PrivateResource">@color/cardview_light_background</item>
+        <item name="android:background" >@color/white</item>
         <item name="android:textColor">@color/blue_A700</item>
         <item name="android:textColorPrimary">@android:color/black</item>
         <item name="android:textColorSecondary">@android:color/black</item>
