--- a/app/src/main/res/layout/widget_main.xml
+++ b/app/src/main/res/layout/widget_main.xml
@@ -49,7 +49,8 @@
         android:id="@+id/widget_listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/colorBackground"
+        android:background="@color/colorBackground"
+        android:listSelector="@color/colorBackgroundItemSelected"
         android:visibility="invisible"
         tools:listitem="@layout/list_widget_main" />
 
