--- a/app/src/main/res/layout-sw600dp/list_main.xml
+++ b/app/src/main/res/layout-sw600dp/list_main.xml
@@ -4,53 +4,31 @@
     android:id="@+id/card_subreddit"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/list_side_margin"
-    android:layout_marginTop="@dimen/list_side_margin"
     android:clickable="true"
     android:focusable="true"
     app:cardBackgroundColor="?android:attr/colorBackground"
     app:cardElevation="@dimen/list_card_elevation">
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_title"
+            style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img_subreddit_small"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_gravity="center_vertical"
-                android:contentDescription="@string/image_description_not_available"
-                android:paddingBottom="@dimen/list_padding_vertical_title"
-                android:paddingEnd="@dimen/list_padding_horizontal_title"
-                android:paddingStart="@dimen/list_padding_horizontal_title"
-                android:paddingTop="@dimen/list_padding_vertical_title"
-                android:scaleType="centerCrop"
-                android:visibility="gone" />
-
-            <TextView
-                android:id="@+id/tv_title"
-                style="@style/TextAppearance.AppCompat.Title"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ellipsize="end"
-                android:fontFamily="@font/roboto_regular"
-                android:gravity="center_vertical"
-                android:maxLines="@integer/list_body_text_title"
-                android:paddingBottom="@dimen/list_padding_vertical_title"
-                android:paddingEnd="@dimen/list_padding_horizontal_title"
-                android:paddingStart="@dimen/list_padding_horizontal_title"
-                android:paddingTop="@dimen/list_padding_vertical_title"
-                android:textSize="16sp" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:fontFamily="@font/roboto_regular"
+            android:gravity="top"
+            android:maxLines="@integer/list_body_text_title"
+            android:paddingBottom="@dimen/list_padding_vertical_title"
+            android:paddingEnd="@dimen/list_padding_horizontal_title"
+            android:paddingStart="@dimen/list_padding_horizontal_title"
+            android:paddingTop="@dimen/list_padding_vertical_title"
+            android:textSize="16sp" />
 
 
         <LinearLayout
@@ -58,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:gravity="bottom"
             android:paddingBottom="4dp"
             android:paddingTop="4dp">
 
@@ -73,6 +52,7 @@
                 android:paddingBottom="@dimen/list_padding_vertical_author"
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
+                android:paddingTop="@dimen/list_padding_vertical_author"
                 android:textColor="?android:attr/colorAccent"
                 android:textStyle="italic" />
 
@@ -88,8 +68,8 @@
                 android:paddingBottom="@dimen/list_padding_vertical_author"
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textStyle="normal" />
+                android:paddingTop="@dimen/list_padding_vertical_author"
+                android:textColor="?android:attr/textColorSecondary" />
 
 
         </LinearLayout>
@@ -115,7 +95,9 @@
                 android:paddingBottom="@dimen/list_padding_vertical_author"
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
+                android:paddingTop="@dimen/list_padding_vertical_author"
                 android:textColor="?android:attr/textColorSecondary"
+
                 android:textStyle="bold" />
 
             <TextView
@@ -130,6 +112,7 @@
                 android:paddingBottom="@dimen/list_padding_vertical_author"
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
+                android:paddingTop="@dimen/list_padding_vertical_author"
                 android:textColor="?android:attr/textColorSecondary"
                 android:textStyle="italic" />
 
@@ -145,6 +128,7 @@
                 android:paddingBottom="@dimen/list_padding_vertical_author"
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
+                android:paddingTop="@dimen/list_padding_vertical_author"
                 android:textColor="?android:attr/textColorSecondary"
                 android:textStyle="italic" />
 
@@ -152,18 +136,16 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="300dp"
+            android:orientation="vertical"
+            android:padding="8dp">
 
             <ImageView
                 android:id="@+id/img_subreddit"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:contentDescription="@string/image_description_not_available"
-                android:paddingBottom="@dimen/list_padding_vertical_title"
-                android:paddingEnd="@dimen/list_padding_horizontal_title"
-                android:paddingStart="@dimen/list_padding_horizontal_title"
-                android:paddingTop="@dimen/list_padding_vertical_title"
                 android:scaleType="centerCrop"
                 android:visibility="gone" />
 
@@ -174,7 +156,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone" />
-
 
         </LinearLayout>
 
