--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="list_card_elevation">2dp</dimen>
 
     <!-- detail -->
+    <dimen name="recycler_view_item_width">600dp</dimen>
 
 </resources>
