--- a/app/src/main/res/values-w800dp/dimens.xml
+++ b/app/src/main/res/values-w800dp/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="list_side_margin">8dp</dimen>
     <dimen name="list_card_elevation">2dp</dimen>
 
+    <dimen name="recycler_view_item_width">600dp</dimen>
 
     <!-- detail -->
 
