--- a/app/src/main/res/layout/activity_detail_tablet.xml
+++ b/app/src/main/res/layout/activity_detail_tablet.xml
@@ -29,8 +29,8 @@
                 android:id="@+id/fragment_subreddit_container"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="24dp"
                 android:layout_weight="1" />
-
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -40,6 +40,7 @@
 
                 <FrameLayout
                     android:id="@+id/fragment_title_container"
+                    android:layout_margin="24dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -48,9 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
-
             </LinearLayout>
-
 
         </LinearLayout>
 
