--- a/app/src/main/res/layout/list_detail_title.xml
+++ b/app/src/main/res/layout/list_detail_title.xml
@@ -6,13 +6,14 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="top"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_subreddit_small_selected"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center_vertical"
             android:contentDescription="@string/image_description_not_available"
             android:paddingBottom="@dimen/list_padding_vertical_title"
@@ -26,7 +27,7 @@
             android:id="@+id/tv_title_selected"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_regular"
             android:gravity="center_vertical"
@@ -39,27 +40,12 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_self_text"
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:ellipsize="end"
-        android:fontFamily="@font/roboto_regular"
-        android:gravity="center_vertical"
-        android:maxLines="@integer/list_body_text_self_text"
-        android:paddingBottom="@dimen/list_padding_vertical_title"
-        android:paddingEnd="@dimen/list_padding_horizontal_title"
-        android:paddingStart="@dimen/list_padding_horizontal_title"
-        android:paddingTop="@dimen/list_padding_vertical_title"
-        android:textSize="12sp" />
-
-
     <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_gravity="bottom"
         android:paddingBottom="4dp"
         android:paddingTop="4dp">
 
