--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -21,13 +21,12 @@
             style="@style/ScrollBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
             <FrameLayout
                 android:id="@+id/fragment_subreddit_container"
+                android:layout_margin="24dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.v4.widget.NestedScrollView>
-
     </android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.design.widget.CoordinatorLayout>
