--- a/app/src/main/res/values-w800dp/dimens.xml
+++ b/app/src/main/res/values-w800dp/dimens.xml
@@ -11,5 +11,6 @@
     <dimen name="recycler_view_item_width">600dp</dimen>
 
     <!-- detail -->
+    <dimen name="exoplayer_media_height">200dp</dimen>
 
 </resources>
