--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -11,4 +11,6 @@
     <!-- detail -->
     <dimen name="recycler_view_item_width">600dp</dimen>
 
+    <dimen name="exoplayer_media_height">300dp</dimen>
+
 </resources>
