--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -5,7 +5,7 @@
         android:enabled="false"
         android:icon="@drawable/shortcut_all">
         <intent
-            android:action="info.pelleritoudacity.android.rcapstone.menu.shortcut.launcher.all"
+            android:action="info.pelleritoudacity.android.rcapstone.shortcut.all"
             android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
@@ -15,7 +15,7 @@
         android:enabled="false"
         android:icon="@drawable/shortcut_popular">
         <intent
-            android:action="info.pelleritoudacity.android.rcapstone.menu.shortcut.launcher.popular"
+            android:action="info.pelleritoudacity.android.rcapstone.shortcut.popular"
             android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
@@ -25,7 +25,7 @@
         android:enabled="false"
         android:icon="@drawable/shortcut_favorite">
         <intent
-            android:action="info.pelleritoudacity.android.rcapstone.menu.shortcut.launcher.favorite"
+            android:action="info.pelleritoudacity.android.rcapstone.shortcut.favorite"
             android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
