--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -30,12 +30,21 @@
                 style="@style/ScrollBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-
                 <FrameLayout
                     android:id="@+id/fragment_subreddit_container"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="24dp" />
+                    android:layout_margin="24dp">
+
+                    <ImageView
+                        android:id="@+id/img_no_internet_main"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:contentDescription="@string/text_no_network"
+                        android:src="@drawable/no_internet"
+                        android:visibility="gone" />
+
+                </FrameLayout>
             </android.support.v4.widget.NestedScrollView>
         </android.support.v4.widget.SwipeRefreshLayout>
 
