add subscribe subreddit in search manage

--- a/app/src/main/res/menu/manage_menu.xml
+++ b/app/src/main/res/menu/manage_menu.xml
@@ -52,6 +52,7 @@
     </item>
 
     <item
+        android:id="@+id/menu_action_create"
         android:enabled="true"
         android:title="@string/title_menu_create"
         android:visible="true" />
