--- a/app/src/main/res/layout/comment_input_dialog.xml
+++ b/app/src/main/res/layout/comment_input_dialog.xml
@@ -10,11 +10,14 @@
         style="@style/TextAppearance.AppCompat.Title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:singleLine="true"
-        android:ellipsize="end"
         android:layout_margin="4dp"
         android:layout_weight="1"
-        android:gravity="center_vertical" />
+        android:background="@color/colorPrimaryDark"
+        android:ellipsize="end"
+        android:gravity="center_vertical"
+        android:singleLine="true"
+        android:textColor="@color/white"
+        android:textStyle="normal|bold" />
 
     <EditText
         android:id="@+id/edit_comment_selector"
@@ -49,7 +52,7 @@
             android:layout_gravity="center_vertical"
             android:layout_margin="4dp"
             android:text="@string/text_delete_selector"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/button_comment_selector"
