--- a/app/src/main/res/menu/tablet.xml
+++ b/app/src/main/res/menu/tablet.xml
@@ -14,6 +14,14 @@
         android:visible="false" />
 
     <item
+        android:id="@+id/menu_action_refresh"
+        android:enabled="true"
+        android:title="@string/title_menu_mode_refresh"
+        android:visible="true"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_action_create"
         android:enabled="true"
         android:title="@string/title_menu_create"
         android:visible="true" />
@@ -24,12 +32,6 @@
         android:title="@string/title_menu_subscribe"
         android:visible="true" />
 
-    <item
-        android:id="@+id/menu_action_refresh"
-        android:enabled="true"
-        android:title="@string/title_menu_mode_refresh"
-        android:visible="true"
-        app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_action_settings"
