--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -178,11 +178,25 @@
     </item>
 
     <item
-        android:id="@+id/menu_action_refresh"
         android:enabled="true"
-        android:title="@string/title_menu_mode_refresh"
-        android:visible="true"
-        app:showAsAction="never" />
+        android:title="@string/title_menu_search"
+        android:visible="true">
+        <menu>
+            <item
+                android:id="@+id/menu_action_subscribe"
+                android:enabled="true"
+                android:title="@string/title_menu_subscribe"
+                android:visible="true" />
+
+            <item
+                android:id="@+id/menu_action_link"
+                android:enabled="true"
+                android:title="@string/title_menu_link"
+                android:visible="true" />
+
+        </menu>
+
+    </item>
 
     <item
         android:id="@+id/menu_action_create"
@@ -191,11 +205,11 @@
         android:visible="true" />
 
     <item
-        android:id="@+id/menu_action_subscribe"
+        android:id="@+id/menu_action_refresh"
         android:enabled="true"
-        android:title="@string/title_menu_subscribe"
-        android:visible="true" />
-
+        android:title="@string/title_menu_mode_refresh"
+        android:visible="true"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/menu_action_settings"
