--- a/app/src/main/res/layout/list_subscribe.xml
+++ b/app/src/main/res/layout/list_subscribe.xml
@@ -30,9 +30,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="6dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 android:textAllCaps="false" />
-
 
             <TextView
                 android:id="@+id/tv_is_over18"
