--- a/app/src/main/res/menu/tablet.xml
+++ b/app/src/main/res/menu/tablet.xml
@@ -14,6 +14,27 @@
         android:visible="false" />
 
     <item
+        android:enabled="true"
+        android:title="@string/title_menu_search"
+        android:visible="true">
+        <menu>
+            <item
+                android:id="@+id/menu_action_subscribe"
+                android:enabled="true"
+                android:title="@string/title_menu_subscribe"
+                android:visible="true" />
+
+            <item
+                android:id="@+id/menu_action_link"
+                android:enabled="true"
+                android:title="@string/title_menu_link"
+                android:visible="true" />
+
+        </menu>
+
+    </item>
+
+    <item
         android:id="@+id/menu_action_refresh"
         android:enabled="true"
         android:title="@string/title_menu_mode_refresh"
@@ -25,13 +46,6 @@
         android:enabled="true"
         android:title="@string/title_menu_create"
         android:visible="true" />
-
-    <item
-        android:id="@+id/menu_action_subscribe"
-        android:enabled="true"
-        android:title="@string/title_menu_subscribe"
-        android:visible="true" />
-
 
     <item
         android:id="@+id/menu_action_settings"
