banner ads in freedebug version

--- a/app/src/main/res/values-w800dp/dimens.xml
+++ b/app/src/main/res/values-w800dp/dimens.xml
@@ -13,4 +13,7 @@
     <!-- detail -->
     <dimen name="exoplayer_media_height">200dp</dimen>
 
+    <dimen name="activity_horizontal_margin">64dp</dimen>
+
+
 </resources>
