--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -51,6 +51,8 @@
 
     </android.support.design.widget.CoordinatorLayout>
 
+    <include layout="@layout/activity_banner"/>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
