--- a/app/src/main/res/layout/activity_detail_tablet.xml
+++ b/app/src/main/res/layout/activity_detail_tablet.xml
@@ -37,7 +37,7 @@
                     android:id="@+id/fragment_subreddit_container"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="24dp"
+                    android:layout_margin="@dimen/tablet_margin"
                     android:layout_weight="1" />
 
                 <LinearLayout
@@ -50,7 +50,7 @@
                         android:id="@+id/fragment_title_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="24dp" />
+                        android:layout_margin="@dimen/tablet_margin" />
 
                     <FrameLayout
                         android:id="@+id/fragment_detail_container"
