--- a/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -1,16 +1,16 @@
 <resources>
-    <!-- base -->
     <dimen name="base_navigation_bar_height">250dp</dimen>
 
 
-    <!-- list -->
     <dimen name="list_app_bar_elevation">4dp</dimen>
     <dimen name="list_side_margin">8dp</dimen>
     <dimen name="list_card_elevation">2dp</dimen>
 
-    <!-- detail -->
     <dimen name="recycler_view_item_width">600dp</dimen>
 
     <dimen name="exoplayer_media_height">300dp</dimen>
+
+    <dimen name="tablet_margin">16dp</dimen>
+    <dimen name="min_height_category_widget">60dp</dimen>
 
 </resources>
