--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,12 +1,10 @@
 <resources>
-    <!-- detail -->
 
     <dimen name="settings_margin">16dp</dimen>
 
     <dimen name="base_navigation_bar_height">240dp</dimen>
 
 
-    <!-- list -->
     <dimen name="list_app_bar_elevation">4dp</dimen>
     <dimen name="list_side_margin">8dp</dimen>
     <dimen name="list_card_elevation">8dp</dimen>
@@ -14,5 +12,8 @@
     <dimen name="recycler_view_item_width">350dp</dimen>
 
     <dimen name="exoplayer_media_height">200dp</dimen>
+
+    <dimen name="tablet_margin">16dp</dimen>
+    <dimen name="min_height_category_widget">60dp</dimen>
 
 </resources>
