--- a/app/src/main/res/values-w800dp/dimens.xml
+++ b/app/src/main/res/values-w800dp/dimens.xml
@@ -1,19 +1,17 @@
 <resources>
-    <!-- base -->
     <dimen name="base_navigation_bar_height">250dp</dimen>
 
-
-    <!-- list -->
     <dimen name="list_app_bar_elevation">4dp</dimen>
     <dimen name="list_side_margin">8dp</dimen>
     <dimen name="list_card_elevation">2dp</dimen>
 
     <dimen name="recycler_view_item_width">600dp</dimen>
 
-    <!-- detail -->
     <dimen name="exoplayer_media_height">200dp</dimen>
 
     <dimen name="activity_horizontal_margin">64dp</dimen>
 
+    <dimen name="tablet_margin">24dp</dimen>
+    <dimen name="min_height_category_widget">60dp</dimen>
 
 </resources>
